# SkyProHomework

./: .flake8  README.md  main.py  mylog.txt  pyproject.toml  requirements.txt
src/: decorators.py  description.py  external_api.py  extra_functions.py  generators.py  masks.py  processing.py  search_line.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
